added product title

--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
                     <img src="wrist-watches.jpg" alt="Product Image">
                 </div>
                 <div class="product-details">
-                    <h2 class="product-title">Headphones</h2>
+                    <h2 class="product-title">Wristwatch</h2>
                     <h4 class="product-price">£15</h4>
                     <button class="cart-button">Add to Cart</button>
                     <button class="view-button">View</button>
